zoc/src/parser_tests/snapshots/zoc__parser_tests__universe__type0.snap
---
source: src/parser_tests/universe.rs
expression: "&cst"
---
Universe(
    UniverseLiteral {
        level: 0,
        start: ByteIndex(
            0,
        ),
    },
)
