zoc/src/parser_tests/snapshots/zoc__parser_tests__universe__type42.snap
---
source: src/parser_tests/universe.rs
expression: "&cst"
---
Universe(
    UniverseLiteral {
        level: 42,
        start: ByteIndex(
            0,
        ),
    },
)
